--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "mongodb": "^3.0.6",
-    "mongoose": "^5.0.15"
+    "mongoose": "^5.0.15",
+    "npm": "^6.0.0"
   },
   "devDependencies": {
     "expect": "^22.4.3",
